Agrega notas, idPatrullero y edicion centralista